--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-antipattern": "node scripts/generate-antipattern.js"
   },
   "dependencies": {
     "@google/genai": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.523.0",
