--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.523.0",
     "next": "14.2.30",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
